Fixed post subtitles incorrectly wrapping

--- a/css/posts.scss
+++ b/css/posts.scss
@@ -22,9 +22,9 @@
 
 .postEntry a .title, .postEntry a .subtitle {
 	display: inline-block;
-	margin: 5px 0 15px 5px;
+	margin: 5px 0 0 5px;
 	font-size: 15pt;
-	line-height: 0;
+	line-height: 1;
 }
 
 .postEntry a .title {
